# pr-sentinel

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  use.txt
.github/workflows/: ci.yml
apps/api/: main.py  schemas.py
apps/cli/: main.py
demo-output/: sample-report.sarif
docs/demo/: sample-report.json  sample-report.md
migrations/: env.py
migrations/versions/: 6774ed234ffb_create_initial_pr_sentinel_tables.py  b2acccb169f6_extend_analysis_persistence_fields.py
pr_sentinel/classifier/: file_classifier.py  language_detector.py
pr_sentinel/core/: config.py  enums.py  models.py
pr_sentinel/diff/: changed_file.py  hunk.py  parser.py
pr_sentinel/engine/: pipeline.py
pr_sentinel/github/: app_auth.py  client.py  comment_publisher.py  models.py  pr_fetcher.py  webhook.py
pr_sentinel/llm/: client.py  context_builder.py  models.py  prompts.py  semantic_reviewer.py
pr_sentinel/reports/: analysis_console.py  console.py  json_report.py  markdown.py  sarif.py
pr_sentinel/risk/: scorer.py  weights.py
pr_sentinel/rules/: auth_rules.py  base.py  config_rules.py  default_rules.py  dependency_rules.py  registry.py  security_rules.py  test_rules.py
pr_sentinel/storage/: analysis_repository.py  database.py  models.py  persistence.py
pr_sentinel/testsuggester/: mapper.py
reports/: pr-3.sarif  pr-6500.json  pr-6500.md
scripts/: encode_github_app_key.py
tests/unit/: test_analysis_api.py  test_analysis_repository.py  test_comment_publisher.py  test_config.py  test_diff_parser.py  test_file_classifier.py  test_github_app_auth.py  test_language_detector.py  test_llm_context_builder.py  test_reports.py  (+8 more)
(+3 files in other folders)
