[project]
name = "pr-sentinel"
version = "0.1.0"
description = "Pull Request Risk Intelligence Platform using diff analysis, static analysis, risk scoring, and selective test recommendation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ivan Bhargava" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "GitPython>=3.1.43",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
pr-sentinel = "apps.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["pr_sentinel*", "apps*"]
exclude = ["migrations*", "tests*", "sample-repos*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

